# eiendomsanalyse

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run_bergen.py  run_haugesund.py  run_oslo.py
Data/: finn_Bergen_estates.json  finn_Bergen_utleie.json  finn_Haugesund_estates.json  finn_Haugesund_utleie.json  finn_Oslo_estates.json  finn_Oslo_utleie.json
Data/Excel_template/: Boligkalkulator1.xlsx
eiendom_analyse_claude/: __init__.py  models.py
eiendom_analyse_claude/analysis/: cashflow.py  cashflow_params.py  excel_export.py  price_gap.py
eiendom_analyse_claude/cli/: gather.py  geocode.py
eiendom_analyse_claude/geo/: geocoders.py  neighbors.py
eiendom_analyse_claude/scrape/: ad_parser.py  search.py  utleie_.py
eiendom_analyse_claude/storage/: json_store.py
eiendom_analyse_claude/utils/: http.py
pages/: 0_Overview.py  1_Prisgap.py  2_Kontantstrom.py  3_Markedsoversikt.py  4_Eiendom_Detaljer.py  5_Datahenting.py
