[project]
name = "eiendomsanalyse-claude"
version = "1.0.0"
description = "Forbedret eiendomsanalyseplattform for det norske boligmarkedet"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "urllib3>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "streamlit>=1.35",
    "folium>=0.15",
    "streamlit-folium>=0.20",
    "branca>=0.7",
    "openpyxl>=3.1",
]

[project.scripts]
gather = "eiendom_analyse_claude.cli.gather:main"
geocode = "eiendom_analyse_claude.cli.geocode:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["eiendom_analyse_claude*"]
